Reset OK / Close Buttons when tasks are restarted

When we import a key in decryptverifyfilesdialog the task
collection is restarted. In that case the Button Box needs
a close button again instead of an OK button.
This also fixes the case that multiple OK buttons would
be added when restarting.

BUG: 391593